2001-06-30  Jeff Hobbs  <jeffh@ActiveState.com>

	2.7 RELEASE

	* generic/tkTable.h: added STREQ #def to replace strcmp(a,b) == 0
	* generic/tkTable.c:
	* generic/tkTableTag.c: made use of STREQ #define.
	Redid tag merging to make use of only one allocated tag.

	* doc/tkTable.html:
	* doc/tkTable.n: updated docs with feature change info

	* tests/tkTable.test: added more tests

	* generic/tkTableCmds.c (Table_ActivateCmd): made table refresh
	when moving the cursor in the active cell.

2001-06-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkTableTag.c (Table_TagCmd): corrected patch for Patch
	#423332 that does prevent excess refresh in the simple case.

2001-06-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkTable.c (TableConfigure): corrected possible crash
	during configure when switching array vars and changed name of
	'restrict' var to something that is not a reserved word. (berggren)

	* library/tkTable.tcl: support for future UTF8_STRING selection on
	unix.

	* generic/tkTable.c:
	* generic/tkTable.h:
	* generic/tkTableTag.c: added support for priorities in tags.
	There are new 'tag lower' and 'tag raise' methods.  This may lead
	to different view characteristics because the default priority
	order is creation order, starting with flash, active, sel, title,
	followed by whatever the user creates.  The old order was fixed at
	flash, active, sel, <celltag>, title, <rowtag>, <coltag>
		**** POTENTIAL INCOMPATABILITY ****

	* tests/tkTable.test: makings of an initial test suite

	* generic/tkTableCmds.c (Table_CurvalueCmd): removed extra curvalue
	in error message.

2001-06-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkTableTag.c (Table_TagCmd): made adding tags to
	cell/row/col create the tag if it didn't exist.  This was
	previously an error.

	* generic/tkTable.c (TableDisplay): changed use of NO_XSETCLIP to
	only operate on Macintosh, added new Windows code that is the
	equivalent of XSetClipRectangles. (teske)