@@ -1,7 +1,7 @@
 '\" The definitions below are for supplemental macros used in Tcl/Tk
 '\" manual entries.
 '\"
-'\" RCS: @(#) $Id: tkTable.n,v 1.2 2000/08/18 23:22:34 hobbs Exp $
+'\" RCS: @(#) $Id: tkTable.n,v 1.3 2001/07/01 01:26:37 hobbs Exp $
 '\"
 '\" .AP type name in/out ?indent?
 '\"	Start paragraph describing an argument to a library procedure.
@@ -547,7 +547,9 @@ the following ways:
 \fInumber,number\fR
 Specifies the cell as a numerical index of row,col which corresponds to the
 index of the associated Tcl array, where \fB\-roworigin,\-colorigin\fR
-corresponds to the first cell in the table (0,0 by default).
+corresponds to the first cell in the table (0,0 by default).  The values
+for row and column will be constrained to actual values in the table,
+which means a valid cell is always found.
 .TP 12
 \fBactive\fR
 Indicates the cell that has the location cursor.
